# ranepa-ai-assistant

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
database/storage/: raft_state.json
llm/: entrypoint.sh
rag/: config.py  main.py
rag/controllers/: __init__.py  handlers.py  schemas.py
rag/service/: __init__.py  generate.py  prompt.py  rag.py  retrieve.py  vectorize.py
vkbot/: config.py  main.py
vkbot/src/: __init__.py
vkbot/src/assistant/: __init__.py  gateway.py  interface.py  schemas.py  types.py
vkbot/src/context/: __init__.py  gateway.py  interface.py  middlewares.py  schemas.py  types.py
vkbot/src/controllers/: __init__.py  middlewares.py
vkbot/src/controllers/handlers/: chat_handlers.py  clear_handler.py
vkbot/src/controllers/keyboards/: __init__.py  is_answered.py
vkbot/src/useCases/: __init__.py  clear_context.py  get_answer.py
