[tool.poetry]
name = "ranepa-ai-assistant"
version = "0.1.0"
description = "RANEPA AI-Assistant"
authors = ["mishaanikutin <billyknife@mail.ru>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
langchain = "^0.3.14"
langchain-ollama = "^0.2.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.6"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
